💥v2.1.8
优化支持翻译引擎内存缓存开关配置项